[Mac] Bring back subpixel AA while the omnibox is being edited.

This regressed in r480444, which wrapped the tab strip's
NSVisualEffectView in another view so that it won't be asked for (often
incorrect) hints about text smoothing. Without the hints, many AppKit
controls disable subpixel AA if subclasses override drawing methods or
draw text themselves. This could be considered an AppKit bug — the
behavior should be the same with/without an NSVisualEffectView in play.

This change sets `drawsBackground = NO` on the field editor and stops
overriding `drawViewBackgroundInRect:` and `isOpaque`, which makes
NSTextView opt back into subpixel AA.

We'll need to make the same kinds of changes in other places,
the omnibox is just the most glaring one.

Bug: 734922
Change-Id: I7e604d862f54bf5b4d122566664baeca3d98bae4
Reviewed-on: https://chromium-review.googlesource.com/544196
Reviewed-by: Trent Apted <tapted@chromium.org>
Commit-Queue: Sidney San Martin <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#481458}
Former-commit-id: 4d77c849b825d8520ec86ec053d0962607d7fab9