chrome/browser/ui/cocoa/location_bar/autocomplete_text_field_editor.mm
@@ -598,20 +598,6 @@ NSMenuItem* PasteAndGoMenuItemForObserver(
   [[FindPasteboard sharedInstance] setFindText:[selection string]];
 }
 
-- (BOOL)isOpaque {
-  // Even if you call -setDrawsBackground:NO, the background still gets drawn
-  // when editing. This is a problem because the left edge of the background
-  // overlaps the security decoration's hover rect. Return that the textview
-  // is transparent, and follow up below by disabling any background drawing.
-  // This will cause background drawing to fall through to the cell. See
-  // https://crbug.com/669870 .
-  return NO;
-}
-
-- (void)drawViewBackgroundInRect:(NSRect)aRect {
-  // See the comment in -isOpaque.
-}
-
 - (void)drawRect:(NSRect)rect {
   AutocompleteTextFieldObserver* observer = [self observer];
   if (observer)
